# casper-smartcontract-template

./: .gitignore  .gitpod.yml  Cargo.toml  Makefile  README.md
contract/: Cargo.toml
contract/src/: contract.rs  data.rs  error.rs  event.rs  lib.rs  main.rs
tests/wasm/: contract.wasm  hello_contract.wasm
utils/contract-utils/: Cargo.toml
utils/test-env/: Cargo.toml
