[package]
name = "hello-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "hello_contract"
path = "bin/contract.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

